--- a/ProjectCourse6.Rmd
+++ b/ProjectCourse6.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "ProjectCourse6"
+title: "ProjectCourse"
 output: html_document
 ---
 
@@ -20,110 +20,91 @@ require(limma)
 ```
 ### Huidige werkmap instellen naar map waar script in staat. 
 ```{r}
-#setwd(dirname(rstudioapi::getSourceEditorContext()$path)) 
-fDir <-  file.choose()
+setwd(dirname(rstudioapi::getSourceEditorContext()$path)) 
+#fDir <-  file.choose()
 ```
 ### read counts
 ```{r}
 
 inhoud = read.table("./RNAseq-bestanden/RNA-Seq-counts.txt", header=TRUE)
-#row.names(inhoud) = inhoud[,"ID"]
-annotatie = read.table(annotatiebestand, header=TRUE, sep="\t"
+row.names(inhoud) = inhoud[,"ID"]
+annotatie = read.table("./RNAseq-bestanden/WCFS1_anno.txt", header=TRUE, sep="\t"
                   , quote="")
 names(annotatie)[names(annotatie) == "name"] = "ID"
 data = merge(inhoud, annotatie, by="ID")
-#fDir <-  read.table("./WCFS1_cnts.txt", header=TRUE) 
-#row.names(inhoud) = inhoud[,"ID"]
-```
-### fName <- "WCFS1_cnts.txt"
-
-### "WCFS1_cnts.txt"
-### "WCFS1_RNA-Seq.txt"
-```{r}
-cnts <- read.delim(paste0(fDir), comment.char = "#") ### ,fName), comment.char="#")
-```
-
-### used for topTags identification
-```{r}
-row.names(cnts) <- cnts[,"ID"]
 ```
 
 ### Create DGEList
 ```{r}
 #exp <- c("WCFS1.glc","WCFS1.glc","WCFS1.rib","WCFS1.rib")
 
-group <- factor(c("WCFS1.glc.1",	"WCFS1.glc.2",	"WCFS1.rib.1"
-                 , "WCFS1.rib.2", "NC8.glc.1", "NC8.glc.2"	
-                 , "NC8.rib.1", "NC8.rib.2"))
-y <- DGEList(counts=data[,2:9], group=group)
+group <- factor(c("WCFS1.glc",	"WCFS1.glc",	"WCFS1.rib"
+                 , "WCFS1.rib", "NC8.glc", "NC8.glc"	
+                 , "NC8.rib", "NC8.rib"))
+x <- DGEList(counts=data[,2:9], group=group)
 ```
+
 ### Normalise counts
 ### Trimmed mean of M values : remove lowest and highest values
 ### (percentile) and calculate mean
 ```{r}
-y <- calcNormFactors(y, method="TMM" )
-keep <- filterByExpr(y)
-x <- y[keep, , keep.lib.sizes=FALSE]
+x <- calcNormFactors(x, method="TMM" )
+keep <- filterByExpr(x)
+x <- x[keep, , keep.lib.sizes=FALSE]
 x$samples$lib.size = colSums(x$counts)
 ```
+
 ### Check statistics
 ```{r}
-print("Count statistics")
-print(summary(y$counts))
-print(y$samples)
+#print("Count statistics")
+#print(summary(x$counts))
+#print(x$samples)
 ```
+
 ### Create design matrix
 ```{r}
-design <- model.matrix(~0+group, data=y$samples)
-colnames(design) <- levels(y$samples$group)
-print(design)
+design <- model.matrix(~0+group, data=x$samples)
+colnames(design) <- levels(x$samples$group)
 ```
+
 ### Estimate Dispersion
-
-Ik weet niet zeker wat hier de goede methode is. 
-y <- estimateGLMCommonDisp(y,design)
-y <- estimateGLMTrendedDisp(y,design, method="power")
-y <- estimateGLMTagwiseDisp(y,design)
-is uit het voorbeeld.
-Philip heeft genoemd dat:
-
-#y <- estimateDisp(y, design)
-
-beter is
 ```{r}
-y <- estimateGLMCommonDisp(y,design)
-y <- estimateGLMTrendedDisp(y,design, method="power")
-y <- estimateGLMTagwiseDisp(y,design)
-
-#y <- estimateDisp(y, design)
-
+x <- estimateGLMCommonDisp(x,design)
+x <- estimateGLMTrendedDisp(x,design, method="power")
+x <- estimateGLMTagwiseDisp(x,design)
 ```
+
 ### Plot results
 ```{r}
-pdf(paste0(fDir,"test.pdf"))
-plotMDS(y)
-plotBCV(y)
+pdf(paste0("test.pdf"))
+plotMDS(x)
+plotBCV(x)
 dev.off()
 ```
+
 ### Fit data
 ```{r}
-fit <- glmFit(y,design)
+fit <- glmFit(x,design)
 ```
-### Determine fold changes
-<<<<<<< HEAD
 
+
+
+
+
+# Code hieronder nog bijwerken/opschonen.
+
+### Dit nog uitwerken, zie issue #4
+```{r}
 # Hier maak je een dataframe met de informatie die je wilt vergelijken 
-df=data.frame(group=rep(c("A","B"),5), value1=1:10,value2=21:30,value3=41:50,stringsAsFactors = F)
-df
-
+#df=data.frame(group=rep(c("A","B"),5), value1=1:10,value2=21:30,value3=41:50,stringsAsFactors = F)
+#df
 # Dit is de code om een Fold Change te berekening uit de limma package 
-res=aggregate(.~group,df,mean) 
-res["fc",]=c("A.vs.B",as.numeric(res[1,-1])/as.numeric(res[2,-1])) 
-res
+#res=aggregate(.~group,df,mean) 
+#res["fc",]=c("A.vs.B",as.numeric(res[1,-1])/as.numeric(res[2,-1])) 
+#res
+```
 
-
-=======
->>>>>>> cc13b86d0e1a0e92be9a1a6a09f5817292c32973
+### P-waarde berekenen
 ```{r}
 mc <- makeContrasts(exp.r=WCFS1.glc-WCFS1.rib, levels=design)
 
@@ -139,52 +120,8 @@ print(res)
 cor.test(y$counts[,1], y$counts[,2])
 cor.test(y$counts[,3], y$counts[,4])
 ```
-### plot van diviance en dispersion
-```{r}
-plot(deviance(fit))
-plot(fit$dispersion)
-```
 ### Alle p-values
 ```{r}
 PV <- fit[["table"]][["PValue"]]
 head(PV, 100)
 ```
-### Alle fold changes in log
-```{r}
-logFC <- fit[["table"]][["logFC"]]
-head(logFC, 100)
-```
-### Alle fold changes normaal
-```{r}
-FC <- logFC^2
-head(FC, 100)
-```
-### Test ding
-```{r}
-summary(de <- decideTestsDGE(fit))
-
-detags <- rownames(y)[as.logical(de)]
-plotSmear(fit, de.tags = detags)
-abline(h=c(-1,1), col="blue")
-```
-<<<<<<< HEAD
-# welke genen zijn interessant om te kiezen adhv hun Fold Change? 
-# Een histogram maken endan kijken hoe het utpakt 
-
-# Welke P-waarde gebruik je om je gen expressie te controleren? 
-# Dit heb je niet echt nodig. Genen die niet veel tot expressie gekomen zijn worden door filteren en normaliseren al uit je data gehaald. Je zou eventueel naar de FDR (FoldChange Discovery Rate) kunnen kijken als je een cut-off wilt voor de frequentie waarin genen voorkomen.  
-
-# Wat is K-mean? 
-
-# Is het berekenen van afstand. Je begint met twee samples en je kijkt dan welke samples het dichtste bij vallen. Je maakt zo groepjes van bij elkaar vallende samples.
-# Je geeft aan de functie het aantal centers mee. Voor ieder center word data gegroepeerd die het meest met elkaar overeenkomt. 
-
-# Hoe cluster je genen? 
-
-# Doe je met de functie hclust 
-# Groepeer niet op de genen maar de samples. Dan is het duidelijk 
-
-# wanneer is dit hierarchisch?
-# Je kan dit hierarchisch maken door de samples die het meest op elkaar lijken te koppelen en dan een soort fylogenetisch boom te maken.  
-=======
->>>>>>> cc13b86d0e1a0e92be9a1a6a09f5817292c32973
