--- a/ProjectCourse6.Rmd
+++ b/ProjectCourse6.Rmd
@@ -21,6 +21,7 @@ library(stats)
 library(dplyr)
 library(ggplot2)
 library(ggfortify)
+library(dendextend)
 ```
 ### Huidige werkmap instellen naar map waar script in staat. 
 ```{r}
@@ -91,17 +92,13 @@ dev.off()
 fit <- glmFit(x,design)
 ```
 
-
-
-
-
 # Code hieronder nog bijwerken/opschonen.
 
 ### Dit nog uitwerken, zie issue #4
 ```{r}
 # Hier maak je een dataframe met de informatie die je wilt vergelijken 
-#df=data.frame(group=rep(c("A","B"),5), value1=1:10,value2=21:30,value3=41:50,stringsAsFactors = F)
-#df
+df=data.frame(group=rep(c("A","B"),5), value1=1:10,value2=21:30,value3=41:50,stringsAsFactors = F)
+df
 # Dit is de code om een Fold Change te berekening uit de limma package 
 #res=aggregate(.~group,df,mean) 
 #res["fc",]=c("A.vs.B",as.numeric(res[1,-1])/as.numeric(res[2,-1])) 
@@ -149,4 +146,27 @@ wssplot(mydata)
 ```{r}
 KM = kmeans(mydata, 4)
 autoplot(KM, mydata, frame=TRUE)
+```
+
+###BingBong
+```{r}
+aggregate(mydata,by=list(KM$cluster),FUN=mean)
+# append cluster assignment
+mydata <- data.frame(mydata, KM$cluster)
+
+```
+```{r}
+#install.packages('dendextend')
+```
+
+###Hierachisch clusteren
+```{r}
+dend <- mydata[1:8,] %>% scale %>%
+  dist %>% hclust %>% as.dendrogram
+dend %>% set("labels", c("WCFS1.glc.2", "NC8.glc.1", "NC8.rib.2", "WCFS1.rib.1", "WCFS1.rib.2", "NC8.rib.1", "WCFS1.glc.1", "NC8.glc.1")) %>% plot
+```
+
+```{r}
+View(data)
+?hclust
 ```
