"Alles t/m dispersion klopt"

--- a/ProjectCourse6.Rmd
+++ b/ProjectCourse6.Rmd
@@ -11,9 +11,12 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## R Markdown
 
-Dit is een R Markdown document voor het project van course 6 gemaakt door groep 1. blablabla
+Dit is een R Markdown document voor het project van course 6 
+gemaakt door groep 1.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+When you click the **Knit** button a document will be generated that includes 
+both content as well as the output of any embedded R code chunks within the 
+document. You can embed an R code chunk like this:
 
 
 ```{r include = FALSE}
@@ -31,6 +34,7 @@ library(gtools)
 setwd(dirname(rstudioapi::getSourceEditorContext()$path))
 ```
 ### read counts
+Hier wordt alle data ingelezen en de annotaties toegevoegd in een tabel
 ```{r}
 
 inhoud = read.table("./RNAseq-bestanden/RNA-Seq-counts.txt", header=TRUE)
@@ -42,6 +46,7 @@ data = merge(inhoud, annotatie, by="ID")
 ```
 
 ### Create DGEList
+Hier word een DGE list gemaakt. Een DGElist is een object van een tabel met counts
 ```{r}
 #exp <- c("WCFS1.glc","WCFS1.glc","WCFS1.rib","WCFS1.rib")
 
@@ -54,18 +59,14 @@ x <- DGEList(counts=data[,2:9], group=group)
 ### Normalise counts
 ### Trimmed mean of M values : remove lowest and highest values
 ### (percentile) and calculate mean
+
+## Dit klopt! de Cutoff is dat er minimaal in twee kolommen 15 reads of meer moeten zitten
 ```{r}
 x <- calcNormFactors(x, method="TMM" )
 keep <- filterByExpr(x)
 x <- x[keep, , keep.lib.sizes=FALSE]
 x$samples$lib.size = colSums(x$counts)
-```
 
-### Check statistics
-```{r}
-#print("Count statistics")
-#print(summary(x$counts))
-#print(x$samples)
 ```
 
 ### Create design matrix
@@ -83,15 +84,19 @@ x <- estimateGLMTagwiseDisp(x,design)
 
 ### Plot results
 ```{r}
-pdf(paste0("test.pdf"))
+#pdf(paste0("test.pdf"))
 plotMDS(x)
+```
+
+```{r}
 plotBCV(x)
-dev.off()
+#dev.off()
 ```
 
 ### Fit data
 ```{r}
 fit <- glmFit(x,design)
+fit$counts
 ```
 
 ### P-waarde berekenen
@@ -146,40 +151,30 @@ aggregate(mydata,by=list(KM$cluster),FUN=mean)
 mydata <- data.frame(mydata, KM$cluster)
 mydata
 ```
-```{r}
-#install.packages('dendextend')
-```
 
-### testje met Foldchange
+### FoldChange
 ```{r}
-
-#df=data.frame(group=rep(c("A","B"),5), value1=1:10,value2=21:30,value3=41:50,stringsAsFactors = F)
-#df
 
 mydata
 # Deze berekining is goed!!
 meanWCFSglu <- rowMeans(mydata[,1:2])
-meanWCFSglu
-
 meanWCFSrib <-rowMeans(mydata[,3:4])
-meanWCFSrib
-
 meanNC8glu <-rowMeans(mydata[,5:6])
-meanNC8glu
-
 meanNC8rib <-rowMeans(mydata[,7:8])
-meanNC8rib
 # vergelijk hier de gemiddelden van de experimenten met elkaar
 # vergelijk dus WCFS.glc met WCFS.rib
 
 # bereken de foldchange tussen twee kolommen
 WCFSfc <- foldchange(meanWCFSglu , meanWCFSrib )
+test <- table[(WCFSfc > 2)]
+test
 NC8fc <- foldchange(meanNC8glu , meanNC8rib )
 
 my_list <- list(WCFSfc, NC8fc)
 my_list
 
-as.data.frame(do.call(cbind, my_list))
+FoldchangeFrame <- data.frame(do.call(cbind, my_list))
+FoldchangeFrame
 #maak de FC Log2
 WCFSfc
 NC8fc
