--- a/ProjectCourse6.Rmd
+++ b/ProjectCourse6.Rmd
@@ -30,7 +30,7 @@ library(gtools)
 ```
 ### read counts
 ```{r}
-
+# Leest het RNA-Seq bestand in en voegt het annotatie bestand er aan toe
 inhoud = read.table("./RNAseq-bestanden/RNA-Seq-counts.txt", header=TRUE)
 row.names(inhoud) = inhoud[,"ID"]
 annotatie = read.table("./RNAseq-bestanden/WCFS1_anno.txt", header=TRUE, sep="\t"
@@ -41,8 +41,7 @@ data = merge(inhoud, annotatie, by="ID")
 
 ### Create DGEList
 ```{r}
-#exp <- c("WCFS1.glc","WCFS1.glc","WCFS1.rib","WCFS1.rib")
-
+# Maakt een groep aan met de bijbehoorende namen
 group <- factor(c("WCFS1.glc",	"WCFS1.glc",	"WCFS1.rib"
                  , "WCFS1.rib", "NC8.glc", "NC8.glc"	
                  , "NC8.rib", "NC8.rib"))
@@ -57,13 +56,6 @@ x <- calcNormFactors(x, method="TMM" )
 keep <- filterByExpr(x)
 x <- x[keep, , keep.lib.sizes=FALSE]
 x$samples$lib.size = colSums(x$counts)
-```
-
-### Check statistics
-```{r}
-#print("Count statistics")
-#print(summary(x$counts))
-#print(x$samples)
 ```
 
 ### Create design matrix
@@ -92,40 +84,9 @@ plotBCV(x)
 fit <- glmFit(x,design)
 ```
 
-#<<<<<<< HEAD
-# Code hieronder nog bijwerken/opschonen.
-
-### Dit nog uitwerken, zie issue #4
-```{r}
-# Hier maak je een dataframe met de informatie die je wilt vergelijken 
-#<<<<<<< HEAD
-#<<<<<<< HEAD
-df=data.frame(group=rep(c("A","B"),5), value1=1:10,value2=21:30,value3=41:50,stringsAsFactors = F)
-df
-#=======
-# hallo github
-#df=data.frame(group=rep(c("A","B"),5), value1=1:10,value2=21:30,value3=41:50,stringsAsFactors = F)
-#df
-#>>>>>>> e0b8d43b0672e39af547a7ccb05b91cbba4f1330
-#=======
-#df=data.frame(group=rep(c("A","B"),5), #value1=1:10,value2=21:30,value3=41:50,stringsAsFactors = F)
-#df
-# hallo github
-#df=data.frame(group=rep(c("A","B"),5), value1=1:10,value2=21:30,value3=41:50,stringsAsFactors = F)
-#df
-#>>>>>>> f228996f38eab90efb44e50d99c4bfc359e31d83
-# Dit is de code om een Fold Change te berekening uit de limma package 
-#res=aggregate(.~group,df,mean) 
-#res["fc",]=c("A.vs.B",as.numeric(res[1,-1])/as.numeric(res[2,-1])) 
-#res
-```
-
-#=======
-#>>>>>>> ec4f3e1871fe9be69577eb31a1264b6a00051e5c
 ### P-waarde berekenen
 ```{r}
 mc <- makeContrasts(exp.r=WCFS1.glc-WCFS1.rib, levels=design)
-
 fit <- glmLRT(fit, contrast=mc)
 ```
 ### Print top tags
@@ -143,8 +104,9 @@ cor.test(x$counts[,3], x$counts[,4])
 PV <- fit[["table"]][["PValue"]]
 head(PV, 100)
 ```
-
+### Grafiek om het aantal clusters te laten zien
 ```{r}
+# wordt gebruikt om het aantal cluster weer te geven dat je moet gebruiken voor de K-means
 wssplot <- function(data, nc=15, seed=1234)
 {
   wss <- (nrow(data)-1)*sum(apply(data, 2,var))
@@ -154,48 +116,30 @@ wssplot <- function(data, nc=15, seed=1234)
   plot(1:nc, wss, type='b', xlab = "number of clusters", 
        ylab = "within groups sum of squares")
 }
-
+# Bij de waarde waar hij overloopt tot een rechte lijn moet je gebruiken voor aantal clusters.
+# Dus met deze gegevens wordt een cluster van 4 gebruikt
 mydata = select(data, c(2,3,4,5,6,7,8,9))
 wssplot(mydata)
 ```
 
 
 
-###K-means berekenen.
+### K-means berekenen.
 ```{r}
 KM = kmeans(mydata, 4)
 autoplot(KM, mydata, frame=TRUE)
 ```
 
-###BingBong
+### Foldchange berekeningen
 ```{r}
-aggregate(mydata,by=list(KM$cluster),FUN=mean)
-# append cluster assignment
-mydata <- data.frame(mydata, KM$cluster)
-#mydata
-```
-
-### testje met Foldchange
-```{r}
-
-#df=data.frame(group=rep(c("A","B"),5), value1=1:10,value2=21:30,value3=41:50,stringsAsFactors = F)
-#df
-<<<<<<< HEAD
-=======
-
-mydata
-# Deze berekining is goed!!
 meanWCFSglu <- rowMeans(mydata[,1:2])
-meanWCFSglu
 
 meanWCFSrib <-rowMeans(mydata[,3:4])
-meanWCFSrib
 
 meanNC8glu <-rowMeans(mydata[,5:6])
-meanNC8glu
 
 meanNC8rib <-rowMeans(mydata[,7:8])
-meanNC8rib
+
 # vergelijk hier de gemiddelden van de experimenten met elkaar
 # vergelijk dus WCFS.glc met WCFS.rib
 
@@ -204,33 +148,20 @@ WCFSfc <- foldchange(meanWCFSglu , meanWCFSrib )
 NC8fc <- foldchange(meanNC8glu , meanNC8rib )
 
 my_list <- list(WCFSfc, NC8fc)
-my_list
->>>>>>> ec4f3e1871fe9be69577eb31a1264b6a00051e5c
 
 as.data.frame(do.call(cbind, my_list))
 #maak de FC Log2
-WCFSfc
-NC8fc
 
-<<<<<<< HEAD
-#res=aggregate(.~group,mydata,mean) 
-#res["fc",]=c("glc.vs.rib",as.numeric(res[1,-1])/as.numeric(res[2,-1]))
-#res
-=======
 WCFSfclog <- foldchange2logratio(WCFSfc, base=2)
-WCFSfclog
->>>>>>> ec4f3e1871fe9be69577eb31a1264b6a00051e5c
 
 NC8fclog <- foldchange2logratio(NC8fc, base=2)
-NC8fclog
 
 my_list2 <- list(WCFSfclog, NC8fclog)
-my_list2
 
 as.data.frame(do.call(cbind, my_list2))
 ```
 
-###Hierachisch clusteren
+### Hierachisch clusteren
 ```{r}
 c_data = t(x$counts)
 dist = dist(c_data, method = "euclidean")
@@ -238,11 +169,3 @@ dist = dist(c_data, method = "euclidean")
 hclust = hclust(dist)
 plot(hclust)
 ```
-<<<<<<< HEAD
-=======
-
-```{r}
-#View(data)
-#?hclust
-```
->>>>>>> ed2601102043b39e87445cc71fcc75dffbdf9ad6
