Code correctie Max.

--- a/ProjectCourse6.Rmd
+++ b/ProjectCourse6.Rmd
@@ -8,98 +8,64 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## R Markdown
+Dit is een R Markdown document voor het project van course 6 gemaakt door groep 1. blablabla (╯°□°）╯︵ ┻━┻
 
-Dit is een R Markdown document voor het project van course 6 
-gemaakt door groep 1.
-
-When you click the **Knit** button a document will be generated that includes 
-both content as well as the output of any embedded R code chunks within the 
-document. You can embed an R code chunk like this:
-
-
-```{r include = FALSE}
-library(edgeR)
+```{r packagesLaden, include = FALSE}
+require(edgeR)
 require(limma)
-library(stats)
-library(dplyr)
-library(ggplot2)
-library(ggfortify)
-library(dendextend)
-library(gtools)
+require(stats)
+require(dplyr)
+require(ggplot2)
+require(ggfortify)
+require(dendextend)
+require(gtools)
 ```
-### Huidige werkmap instellen naar map waar script in staat. 
-```{r}
-#setwd(dirname(rstudioapi::getSourceEditorContext()$path))
-```
-### read counts
-Hier wordt alle data ingelezen en de annotaties toegevoegd in een tabel
-```{r}
-# Leest het RNA-Seq bestand in en voegt het annotatie bestand er aan toe
+```{r include = FALSE}
+# Data RNA-seq inlezen en annotatie eraan koppelen. 
+setwd(dirname(rstudioapi::getSourceEditorContext()$path))
+
 inhoud = read.table("./RNAseq-bestanden/RNA-Seq-counts.txt", header=TRUE)
 row.names(inhoud) = inhoud[,"ID"]
 annotatie = read.table("./RNAseq-bestanden/WCFS1_anno.txt", header=TRUE, sep="\t"
                   , quote="")
 names(annotatie)[names(annotatie) == "name"] = "ID"
 data = merge(inhoud, annotatie, by="ID")
-```
 
-### Create DGEList
-Hier word een DGE list gemaakt. Een DGElist is een object van een tabel met counts
-```{r}
-# Maakt een groep aan met de bijbehoorende namen
 group <- factor(c("WCFS1.glc",	"WCFS1.glc",	"WCFS1.rib"
                  , "WCFS1.rib", "NC8.glc", "NC8.glc"	
                  , "NC8.rib", "NC8.rib"))
 x <- DGEList(counts=data[,2:9], group=group)
-```
 
-### Normalise counts
-### Trimmed mean of M values : remove lowest and highest values
-### (percentile) and calculate mean
-
-## Dit klopt! de Cutoff is dat er minimaal in twee kolommen 15 reads of meer moeten zitten
-```{r}
+# Normalisatiefactoren berekenen en low-read-counts wegfilteren,
+# nodig voor normalisatie en dispersie.
 x <- calcNormFactors(x, method="TMM" )
 keep <- filterByExpr(x)
 x <- x[keep, , keep.lib.sizes=FALSE]
 x$samples$lib.size = colSums(x$counts)
 
-<<<<<<< HEAD
-=======
-```
-
->>>>>>> 1aca34a9a4d1f1a7e3061220664a0e41982cf4c3
-### Create design matrix
-```{r}
+# Design matrix maken, nodig voor dispersie bepalen.
 design <- model.matrix(~0+group, data=x$samples)
 colnames(design) <- levels(x$samples$group)
-```
 
-### Estimate Dispersion
-```{r}
+# Dispersie bepalen.
 x <- estimateGLMCommonDisp(x,design)
 x <- estimateGLMTrendedDisp(x,design, method="power")
 x <- estimateGLMTagwiseDisp(x,design)
 ```
 
-### Plot results
-```{r}
-<<<<<<< HEAD
-#pdf(paste0("test.pdf"))
-=======
->>>>>>> ed2601102043b39e87445cc71fcc75dffbdf9ad6
-plotMDS(x)
+### Samenvatting van genormaliseerde data
+Overzicht van alle counts:
+```{r samenvattingCounts, echo=FALSE}
+print(summary(x$counts))
 ```
-<<<<<<< HEAD
-=======
-
->>>>>>> 1aca34a9a4d1f1a7e3061220664a0e41982cf4c3
-```{r}
+Overzicht van de verschillende groepen:
+```{r samplesPrinten, echo=FALSE}
+print(x$samples)
+```
+### Plots van genormaliseerde data
+```{r plotsWeergeven, echo=FALSE}
+plotMDS(x)
 plotBCV(x)
-<<<<<<< HEAD
-#dev.off()
-=======
->>>>>>> ed2601102043b39e87445cc71fcc75dffbdf9ad6
 ```
 
 ### Fit data
