--- a/ProjectCourse6.Rmd
+++ b/ProjectCourse6.Rmd
@@ -122,19 +122,9 @@ KM = kmeans(mydata, 4)
 autoplot(KM, mydata, frame=TRUE)
 ```
 
-### Foldchange berekeningen
+### Cluster
 ```{r}
-<<<<<<< HEAD
-meanWCFSglu <- rowMeans(mydata[,1:2])
-
-meanWCFSrib <-rowMeans(mydata[,3:4])
-
-meanNC8glu <-rowMeans(mydata[,5:6])
-
-meanNC8rib <-rowMeans(mydata[,7:8])
-
-=======
-aggregate(mydata,by=list(KM$cluster),FUN=mean)
+a,by=list(KM$cluster),FUN=mean)
 # append cluster assignment
 mydata <- data.frame(mydata, KM$cluster)
 #mydata
